Some more updates.

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ instagram_username: dev.nath
 linkedin_handle:  dev-nath
 gplus_handle: +DibyenduNath-Dev-UCSB
 
-resume_loc: files/resume_dev_nath.pdf
+resume_url: files/resume_dev_nath.pdf
+stochss_pub_url: http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005220
 
 ucsb_url: http://www.ucsb.edu
 ucsb_cs_url:  https://www.cs.ucsb.edu
