--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: dev.nath.cs@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal Website of Dev Nath.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://devnath.net" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://devnath.net" # the base hostname & protocol for your site, e.g. http://example.com
 fullname: Dev Nath
 
 twitter_username: askdevnath
@@ -27,12 +27,11 @@ facebook_username:  devnath.web
 instagram_username: dev.nath
 
 linkedin_handle:  dev-nath
-gplus_handle: +DibyenduNath-Dev-UCSB
 
 resume_url: files/resume_dev_nath.pdf
 stochss_pub_url: http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005220
 
-ucsb_url: http://www.ucsb.edu
+ucsb_url: https://www.ucsb.edu
 ucsb_cs_url:  https://www.cs.ucsb.edu
 ucsb_racelab_url: https://www.cs.ucsb.edu/~ckrintz/racelab.html
 
