--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://devnath.net" # the base hostname & protocol for your site, e.g. http://example.com
 fullname: Dev Nath
 
-twitter_username: askdevnath
+twitter_username: dev__nath
 github_username:  dnath
 facebook_username:  devnath.web
 instagram_username: dev.nath
