--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://devnath.net" # the base hostname & protocol for your site, e.g. http://example.com
 fullname: Dev Nath
 
-twitter_username: d3v_nath
+twitter_username: devnath_2
 github_username:  dnath
-facebook_username:  d3v.nath
+facebook_username:  devnath2
 instagram_username: dev.nath
 
 linkedin_handle:  dev-nath
